# ml-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  lifespan.py  main.py
migrations/: env.py
ml_service/: app.py  main.py
ml_service/api/: default.py  router.py  routes.py
ml_service/api/middlewares/: throttling.py
ml_service/db/: session.py
ml_service/domains/extractors/: adapter.py  base.py  orchestrator.py  strategies.py
ml_service/domains/extractors/multi_field/: deepseek.py
ml_service/domains/llm/: base.py
ml_service/domains/llm/deepseek/: __init__.py
ml_service/domains/llm/gemma/: __init__.py
ml_service/domains/llm/phi/: __init__.py
ml_service/domains/ocr/: base.py  chain.py
ml_service/domains/ocr/easy_ocr/: __init__.py
ml_service/domains/ocr/ocr_space/: __init__.py
ml_service/domains/ocr/tesseract/: __init__.py
ml_service/settings/: config.py  logger.py  metrics.py
ml_service/utils/: retry.py  timer.py  workers.py
tests/: test_app.py  test_stub.py
