[project]
name = "autocare-ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
